--- a/style.css
+++ b/style.css
@@ -1,16 +1,20 @@
-header {
-    background-color:rgb(206, 249, 249)
+body {
+    background-color:rgb(176, 172, 234)
 }
 h1{
-    font-family: fantasy;
-    text-align:left;
-    font-size: 25px;
+    font-family:Georgia, 'Times New Roman', Times, serif;
+    text-align:center;
+    font-size: 45px;
     font-weight:bold;
+    padding: 5px;
+    border: 1px;
+    border-radius:3px;
+    background-color:whitesmoke
 }
 
 ul {
     list-style-type: none;
-    padding:5px;
+
 }
 
 .container-navigation {
@@ -27,10 +31,53 @@ li {
     margin: 0px 3px;
     border: 1px; 
     border-radius: 5px;
-    background-color: rgb(148, 213, 229);
+    background-color: rgb(205, 231, 245);
 }
 
+h2 {
+    font-size: 30px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: bold;
+    color: aliceblue;
+
+}
 .section-one {
     /* border: 1px ; */
-    background-color: rgb(129, 217, 239);
+    background-color: rgb(98, 138, 246);
+}
+
+.container {
+    display:flex
+}
+.typography-grp {
+    display:flex;
+    justify-content: space-evenly; 
+    flex-wrap: wrap;  
+}
+.typography {
+    width:275px;
+    height:275px;
+    padding:4px;
+}
+h4{
+    font-size: 20px;
+    font-family: 'Times New Roman', Times, serif;
+}
+.caption {
+    font-size: 15px;
+    font-style: italic;
+    text-align:center;
+}
+
+.section-two {
+    background-color: lightgoldenrodyellow;
+}
+h3 {
+    font-size: 30px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: bold;
+}
+
+.section-three {
+    background-color: rgb(250, 151, 151);
 }
