--- a/style.css
+++ b/style.css
@@ -1,5 +1,10 @@
 body {
-    background-color:rgb(176, 172, 234)
+    background-color:#b0acea;
+    margin:0;
+    gap:0;
+}
+header {
+    background-color:whitesmoke
 }
 h1{
     font-family:Georgia, 'Times New Roman', Times, serif;
@@ -9,7 +14,7 @@ h1{
     padding: 5px;
     border: 1px;
     border-radius:3px;
-    background-color:whitesmoke
+    
 }
 
 ul {
@@ -28,10 +33,12 @@ li {
     font-family: Arial, Helvetica, sans-serif;
     font-size: large;
     padding: 10px;
-    margin: 0px 3px;
+    margin: 5px 4px;
     border: 1px; 
     border-radius: 5px;
-    background-color: rgb(205, 231, 245);
+    background-color: #f7619d
+    /* background-color: lightgoldenrodyellow; */
+    
 }
 
 h2 {
@@ -39,28 +46,34 @@ h2 {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: bold;
     color: aliceblue;
-
+    margin:10px;
+    border: 1px;
 }
 .section-one {
-    /* border: 1px ; */
-    background-color: rgb(98, 138, 246);
+    border: 0px ;
+    background-color: #628af6;
+    margin:0px;
+
 }
 
 .container {
     display:flex
 }
-.typography-grp {
+.Typography-grp {
     display:flex;
     justify-content: space-evenly; 
     flex-wrap: wrap;  
 }
-.typography {
-    width:275px;
-    height:275px;
+.Typography {
+    display:flex;
+    flex-wrap:wrap;
+    width:100px;
+    height:100px;
     padding:4px;
 }
 h4{
     font-size: 20px;
+    text-align: left;
     font-family: 'Times New Roman', Times, serif;
 }
 .caption {
@@ -70,7 +83,7 @@ h4{
 }
 
 .section-two {
-    background-color: lightgoldenrodyellow;
+    background-color: #caecfe;
 }
 h3 {
     font-size: 30px;
@@ -79,5 +92,11 @@ h3 {
 }
 
 .section-three {
-    background-color: rgb(250, 151, 151);
+    background-color: #fa9797;
+}
+footer {
+    background-color: #fdcdb3 ;
+    font-size: 15px;
+    font-style: italic;
+    text-align:center;
 }
