--- a/style.css
+++ b/style.css
@@ -126,7 +126,7 @@ h5{
     padding: 30px;
 }
 .section-four{
-    background-color: #a7e0e1;
+    background-color: #f9be82;
     padding:30px;
 }
 footer {
