--- a/style2.css
+++ b/style2.css
@@ -71,6 +71,8 @@ h2 {
     display:flex;
     justify-content:space-evenly; 
     flex-wrap:wrap;  
+    flex-direction: column;
+    padding:10px;
 }
 .Typography {
     display:flex;
@@ -80,10 +82,10 @@ h2 {
     padding:10px;
 }
 h4{
-    font-size: 20px;
-    text-align: left;
+    font-size: 25px;
+    text-align: center;
     font-family: 'Times New Roman', Times, serif;
-    color:antiquewhite;
+    color:#535fa1;
 }
 .caption {
     font-size: 15px;
