--- a/style.css
+++ b/style.css
@@ -48,6 +48,7 @@ button {
 a {
     color:lavenderblush;
     text-align: center;
+    justify-content: center;
 }
 button1 {
     font-family: Arial, Helvetica, sans-serif;
@@ -56,7 +57,7 @@ button1 {
     margin: 5px 4px;
     border: 1px; 
     border-radius: 5px;
-    background-color: #f1c3aa;
+    background-color: #ffa959;
     justify-content:right;
 }
 
@@ -128,7 +129,7 @@ h5{
     padding: 30px;
 }
 .section-four{
-    background-color: #f9be82;
+    background-color: #f9c9b0;
     padding:30px;
 }
 .section-five{
@@ -141,14 +142,39 @@ h6 {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: bold;
     text-align: center;
+    color:black;
 }
 .itcc {
     display:flex;
     justify-content:center; 
     flex-wrap:wrap;  
     flex-direction: column;
+    align-items: center;
     padding:10px;
     text-align: center;
+    margin: 5px 4px;
+    border: 1px; 
+    border-radius: 5px;
+    background-color: #e69293;
+    /* justify-content: flex-end; */
+}
+.itcc-pic1 {
+    display:flex;
+    flex-wrap:wrap;
+    aspect-ratio: 8,5;
+    /* width:240px;
+    height:150px; */
+    padding:20px;
+    justify-items: center;
+
+}
+.itcc-pic2 {
+    display:flex;
+    flex-wrap:wrap;
+    /* width:300px;
+    height:200px; */
+    padding:20px;
+    justify-content: center;
 }
 
 footer {
