--- a/style2.css
+++ b/style2.css
@@ -93,7 +93,7 @@ h4{
     text-align:center;
 }
 footer {
-    background-color: #fcf6b5 ;
+    background-color: #f9c9b0 ;
     font-size: 15px;
     font-style: italic;
     text-align:center;
