--- a/style.css
+++ b/style.css
@@ -88,6 +88,7 @@ h2 {
     justify-content:center; 
     flex-wrap:wrap;  
     flex-direction: column;
+    align-items: center;
 }
 .Typography {
     display:flex;
@@ -160,7 +161,7 @@ h6 {
 }
 .itcc {
     display:flex;
-    justify-content:space-evenly; 
+    justify-content:center; 
     flex-wrap:wrap;  
     flex-direction: column;
     align-items: center;
@@ -178,8 +179,9 @@ h6 {
     width:100%;
     max-width:425px;
     height:auto; 
-    padding:20px;
+    padding:10px;
     justify-content: center;
+    align-items:center;
 
 }
 
