--- a/style2.css
+++ b/style2.css
@@ -50,9 +50,10 @@ h2 {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: bold;
     color:#567ace;
-    margin:10px;
+    margin:auto;
     border: 1px;
     padding:10px;
+    text-align: left;
 }
 .section-one {
     border: 0px ;
@@ -80,8 +81,9 @@ h2 {
     width:100%;
     max-width:425px;
     height:auto; 
-    padding:20px;
+    padding-top:20px;
     justify-content: center;
+    margin-top: auto;
     /* display:flex;
     flex-wrap:wrap;
     width:425px;
