--- a/style.css
+++ b/style.css
@@ -179,7 +179,7 @@ h6 {
     width:100%;
     max-width:425px;
     height:auto; 
-    padding:10px;
+    padding-top:10px;
     justify-content: center;
     align-items:center;
 
