--- a/style.css
+++ b/style.css
@@ -21,16 +21,17 @@ h1{
     
 }
 
-ul {
+/* ul {
     list-style-type: none;
 
-}
+} */
 
 .container-navigation {
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
     justify-content:center;
+    padding:10px;
 }
 
 button {
