--- a/style.css
+++ b/style.css
@@ -107,7 +107,10 @@ h4{
 .caption {
     font-size: 20px;
     font-style: italic;
-    text-align:center;
+    text-align: center;
+    width:100%;
+    max-width:450px;
+    /* padding-top:10px; */
 }
 
 .section-two {
@@ -154,11 +157,14 @@ button2 {
     text-align: center;
 }
 h6 {
-    font-size: 20px;
+    font-size: 25px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: bold;
     text-align: center;
     color:black;
+    word-wrap: break-word;
+    margin:0px;
+    padding:20px;
 }
 .itcc {
     display:flex;
@@ -166,7 +172,7 @@ h6 {
     flex-wrap:wrap;  
     flex-direction: column;
     align-items: center;
-    padding:20px;
+    padding:30px;
     text-align: center;
     margin: 5px 4px;
     border: 1px; 
@@ -178,9 +184,9 @@ h6 {
     display:flex;
     flex-wrap:wrap;
     width:100%;
-    max-width:425px;
+    max-width:450px;
     height:auto; 
-    padding-top:10px;
+    padding-top:30px;
     justify-content: center;
     align-items:center;
 
