--- a/style2.css
+++ b/style2.css
@@ -89,7 +89,7 @@ h2 {
     width:100%;
     max-width:425px;
     height:auto; 
-    padding-top:20px;
+    /*padding-top:20px;*/
     justify-content: center;
     
     
@@ -102,7 +102,7 @@ h2 {
     padding:10px; */
 }
 h4{
-    font-size: 25px;
+    font-size: 30px;
     text-align: center;
     font-family: 'Times New Roman', Times, serif;
     color:#535fa1;
@@ -114,9 +114,38 @@ h4{
     width:100%;
     max-width:425px;
     padding-top:10px;
+    padding-bottom: 20px;
+}
+.section-three {
+    background-color: #fecfcf;
+    padding: 30px;
+    justify-content: center;
+}
+h3 {
+    font-size: 35px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: bold;
+    text-align:center;
+    margin:0;
+    
+}
+.reflection{
+    display:flex;
+  
+    flex-wrap:wrap;  
+    flex-direction: column;
+    justify-content: space-evenly;
+    
+}
+.Reflection{
+    font-size: 22px;
+    font-style: italic;
+    text-align: center;
+    width:100%;
+    max-width:1000px; 
 }
 footer {
-    background-color: #f9c9b0 ;
+    background-color: #fee4d6 ;
     font-size: 15px;
     font-style: italic;
     text-align:center;
