--- a/style.css
+++ b/style.css
@@ -95,7 +95,7 @@ h2 {
     display:flex;
     flex-wrap:wrap;
     width:100%;
-    max-width: 300px;
+    max-width: 250px;
     height:auto;
     padding:10px;
 }
@@ -127,13 +127,30 @@ h5{
     background-color: #a7e0e1;
     padding: 30px;
 }
+.reflection {
+    display:flex;
+    justify-content:center; 
+    flex-wrap:wrap;  
+    flex-direction: column;
+    align-items: center;
+    padding-left:50px;
+    padding-bottom: 20px;
+    text-align: left;
+    margin: 5px 4px;
+    border: 1px; 
+    border-radius: 5px;
+   
+    
+}
 .Reflection{
-    font-size: 20px;
+    font-size: 25px;
     font-style: italic;
     text-align: left;
+    margin:0;
    /* width:100%;
     max-width:900px;*/ 
 }
+
 .section-four{
     background-color: #cee5d5;
     padding:30px;
