--- a/style2.css
+++ b/style2.css
@@ -117,7 +117,7 @@ h4{
     padding-bottom: 20px;
 }
 .section-three {
-    background-color: #fecfcf;
+    background-color: #b9c3fe;
     padding: 30px;
     justify-content: center;
 }
@@ -142,7 +142,7 @@ h3 {
     font-style: italic;
     text-align: center;
     width:100%;
-    max-width:1000px; 
+    max-width:900px; 
 }
 footer {
     background-color: #fee4d6 ;
