--- a/style.css
+++ b/style.css
@@ -114,8 +114,8 @@ h3 {
     font-size: 30px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: bold;
-    
-    
+    color:black;
+    text-align: left;
 }
 h5{
     font-size:15px;
@@ -133,12 +133,13 @@ h5{
     flex-wrap:wrap;  
     flex-direction: column;
     align-items: center;
-    padding-left:50px;
+    padding-left:65px;
     padding-bottom: 20px;
     text-align: left;
     margin: 5px 4px;
     border: 1px; 
     border-radius: 5px;
+    max-width: 1100px;
    
     
 }
