--- a/style.css
+++ b/style.css
@@ -90,6 +90,7 @@ h2 {
     flex-wrap:wrap;  
     flex-direction: column;
     align-items: center;
+    padding-top:10px;
 }
 .Typography {
     display:flex;
@@ -103,7 +104,9 @@ h4{
     font-size: 23px;
     text-align: center;
     font-family: 'Times New Roman', Times, serif;
-    color:antiquewhite
+    color:antiquewhite;
+    margin:0;
+    padding-bottom:20px;
 }
 
 .section-two {
