--- a/style2.css
+++ b/style2.css
@@ -57,6 +57,7 @@ h2 {
     margin:auto;
     border: 1px;
     padding-top:10px;
+    padding-left:20px;
     text-align: left;
     word-wrap:break-word;
 }
