--- a/style2.css
+++ b/style2.css
@@ -118,7 +118,7 @@ h4{
     padding-bottom: 20px;
 }
 .section-three {
-    background-color: #b9c3fe;
+    background-color: #f1d2e7;
     padding: 30px;
     justify-content: center;
 }
