--- a/style.css
+++ b/style.css
@@ -112,6 +112,7 @@ h4{
 .section-two {
     background-color: #b7d3e9;
     padding:30px;
+   
 }
 h3 {
     font-size: 30px;
@@ -149,7 +150,9 @@ h5{
     padding:10px;
     flex-direction:row;
     justify-content: flex-start;
+    flex: 1;
 }
+
 .poster{
     font-size: 23px;
     font-style: italic;
@@ -157,8 +160,12 @@ h5{
     margin:0;
     display:flex;
     flex-direction: row;
-    justify-content: flex-end;
-    
+    justify-content: baseline;
+    align-items:baseline;
+    flex:1;
+    width:100%;
+    min-width: 150px;
+    padding-left:10px;
 }
 
 .section-three {
